2016-09-02  Jérôme Pasquier  <rainbru@free.fr>

	* ROADMAP: close the landing page section.

2016-09-01  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (rainbrurpg-services): remove two sources that
	contain additional main() function.
	* CMakeLists.txt (rainbrurpg-services): becomes a shared library.

	* CI/before_install.sh (libogre-dev): fix name issue to libogre-1.8-dev.

	* .travis.yml (dist): switch to trusty to have clang 3.8.
	* CI/before_install.sh (clang): try conditionnal installation of
	clang 3.8.

	* CI/script.sh (clang++): try using libc++ to fix max_align_t issue.

	* CI/before_install.sh (apt-get): add --force-yes due to GPG errors.

	* CI/before_install.sh: trying clang 3.8 instead of 3.9.

	* CI/before_install.sh: add '-y' to ppa line.

	* CMakeLists.txt: re-enable C++11 to test it with cmang 3.9.
	* CI/before_install.sh: trying to install clang 3.9.

	* CMakeLists.txt: disable C++11 support for clang compiler to
	avoid CI fails.

2016-08-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine_Test.cpp (my_test): fake unit test.
	* CI/script.sh: add `make check` to travis-ci.
	* CMakeLists.txt (BUILD_UNITTESTS): search for Boost.Test only if
	needed.
	* CMakeLists.txt (BUILD_UNITTESTS): add the unit tests option.

	* ROADMAP: add Unit tests section.

2016-08-18  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: replace GLOB with hardcoded filenames for all other
	targets.

	* CMakeLists.txt (logger-src): replace GLOB with hardcoded filenames.
	* src/server/tools/server_ctl/CommandLine.cpp (getNext): remove
	trim to fix CI fail.

	* DEPENDENCIES (Enet): add full section from CI/before_install.sh.
	* DEPENDENCIES (readline): add homepage and download sections.
	* src/server/tools/server_ctl/CommandLine.cpp: remove iostream include
	trying to fix the ci build.
	* DEPENDENCIES (Boost): add homepage and download sections.
	* DEPENDENCIES (Guile): add full section from CI/before_install.sh.